--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,15 +2,31 @@
 
 # Defining the exact version will make sure things don't break
 
-sphinx==1.8.5
+# sphinx==1.8.5
+
 sphinx_rtd_theme==0.5.1
-readthedocs-sphinx-search==0.1.0
+sphinx-math-dollar   #==1.2
+
+# readthedocs-sphinx-search==0.1.0
+
 linuxdoc==20210324
-sphinx-math-dollar==1.2
+
 nbsphinx
+
 numpydoc
+
 sphinxcontrib.bibtex
+
 ipykernel
 IPython
-matplotlib
+
+matplotlib >= 3.3.2'
+
 h5py
+
+numpy >= 1.16'
+astropy >= 4.0'
+numba >= 0.50'
+scipy >= 1.5.0'
+
+seaborn >= 0.11.1'
