--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,7 +8,7 @@
 sphinx_rtd_theme==0.5.1
 sphinx-math-dollar>=1.2
 
-sphinx.ext.intersphinx
+#sphinx.ext.intersphinx
 
 sphinxcontrib.bibtex
 
@@ -19,7 +19,7 @@ nbsphinx
 
 python
 
-sphinx.ext.mathjax
+#sphinx.ext.mathjax
 
 ipykernel
 IPython
