--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,8 +2,12 @@
 
 # Defining the exact version will make sure things don't break
 
-# sphinx is required, but readthedocs does that automatically, so it doesn't need to be here
-# but you will need it if you want to build the html files locally
+# sphinx is required.  readthedocs does that automatically, so it doesn't need
+# to be here but you will need it if you want to build the html files locally
+
+# seems obvious, but python is required.  readthedocs does that automatically, 
+# so it doesn't need to be here but you will need it if you want to build the 
+# html files locally
 
 sphinx_rtd_theme==0.5.1
 sphinx-math-dollar>=1.2
@@ -13,8 +17,6 @@ sphinxcontrib.bibtex
 linuxdoc==20210324
 
 nbsphinx
-
-python
 
 ipykernel
 IPython
