--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -20,8 +20,9 @@ nbsphinx
 
 ipykernel
 IPython
-IPython.sphinxext.ipython_console_highlighting
-IPython.sphinxext.ipython_directive
+
+#IPython.sphinxext.ipython_console_highlighting
+#IPython.sphinxext.ipython_directive
 
 numpy >= 1.16'
 numpydoc
