--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -21,9 +21,6 @@ nbsphinx
 ipykernel
 IPython
 
-#IPython.sphinxext.ipython_console_highlighting
-#IPython.sphinxext.ipython_directive
-
 numpy >= 1.16'
 numpydoc
 astropy >= 4.0'
@@ -32,9 +29,18 @@ scipy >= 1.5.0'
 
 h5py
 matplotlib >= 3.3.2'
-matplotlib.sphinxext.plot_directive
+
+#matplotlib.sphinxext.plot_directive
 
 #seaborn >= 0.11.1'
 
 #sphinx.ext.graphviz
 
+
+#    'sphinx.ext.mathjax',
+
+#    'sphinx.ext.intersphinx',
+
+#    'matplotlib.sphinxext.plot_directive',
+#    'IPython.sphinxext.ipython_console_highlighting',
+#    'IPython.sphinxext.ipython_directive',
