--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -26,21 +26,17 @@ numpydoc
 astropy >= 4.0'
 numba >= 0.50'
 scipy >= 1.5.0'
-
 h5py
 matplotlib >= 3.3.2'
 
-#matplotlib.sphinxext.plot_directive
+# The following are listed in the 'extensions []' block in conf.py
+# Readthedocs doesn't want them here, but they are required if you want
+# to build the html files locally
+#
+# matplotlib.sphinxext.plot_directive
+# sphinx.ext.mathjax
+# sphinx.ext.intersphinx
+# matplotlib.sphinxext.plot_directive
+# IPython.sphinxext.ipython_console_highlighting
+# IPython.sphinxext.ipython_directive
 
-#seaborn >= 0.11.1'
-
-#sphinx.ext.graphviz
-
-
-#    'sphinx.ext.mathjax',
-
-#    'sphinx.ext.intersphinx',
-
-#    'matplotlib.sphinxext.plot_directive',
-#    'IPython.sphinxext.ipython_console_highlighting',
-#    'IPython.sphinxext.ipython_directive',
